--- a/src/CSS/Live.css
+++ b/src/CSS/Live.css
@@ -1,23 +1,13 @@
 .div {
-    height: 98%;
-    width: 100%;
-}
-
-.div2 {
     height: 100%;
     width: 100%;
 }
-::-webkit-scrollbar{ display:none; }
-
-
-.live_div{
+.div::-webkit-scrollbar{ display:none; }
+.div_master {
+    height: 100%;
+    width: 100%;
+}
+.div_live{
     margin-top: 64px;
-    width: 99.1%;
-    
+    width: 100%;
 }
-
-.grid{
-    height: 100%;
-    
-}
-
